objects/NVMContactWorld__Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>NVMContactWorld__AdditionalFields__c</fullName>
        <description>Name of additional field to show in the Log a Call Action.</description>
        <label>Log A Call Additional Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ControlCallRecordingClassName__c</fullName>
        <description>Used to specify the name of the Apex Class that implements the controlling of call recording.</description>
        <label>Call Recording Selector Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Flags__c</fullName>
        <inlineHelpText>Optional control flags</inlineHelpText>
        <label>Flags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Link_Calls_To_Many_Objects__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set to &apos;true&apos;, the user will be able to link a call to both a &apos;Name&apos; (contact or lead) and a &apos;Related To&apos; (account, opportunity, etc.)</description>
        <label>Link call to Name and Related object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Post_to_Chatter_when_creating_callbacks__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If enabled, creates a chatter post every time you schedule a callback</description>
        <label>Post to Chatter when creating callbacks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Post_to_Chatter_when_saving_note__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If enabled, creates a chatter post every time you write/modify/clear a note using the &apos;Log a call&apos; action</description>
        <label>Post to Chatter when saving note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__SelectPresentedClidClassName__c</fullName>
        <description>Used to specify the name of the Apex Class that implements the Presented CLID query.</description>
        <label>Callback Number Selector Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Set_due_date_on_call_task_records__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set to &apos;true&apos;, when ContactWorld creates a task for a call, the &apos;due date&apos; field will be set</description>
        <label>Set due date on call task records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__baseURL__c</fullName>
        <inlineHelpText>URL used to access ContactWorld API.  Please ensure that it is in the list of allowed Remote Sites.</inlineHelpText>
        <label>ContactWorld URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__callTimeOutMS__c</fullName>
        <defaultValue>20000</defaultValue>
        <inlineHelpText>API call time out time in milliseconds</inlineHelpText>
        <label>Call Time Out (ms)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__clientId__c</fullName>
        <label>ContactWorld Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__clientSecret__c</fullName>
        <label>ContactWorld API Authentication Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Settings</label>
</CustomObject>